--- a/src/components/ProjectRow/ProjectRow.css
+++ b/src/components/ProjectRow/ProjectRow.css
@@ -18,7 +18,7 @@
 
 .project-index {
   font-size: 14px;
-  opacity: 0.4;
+  opacity: 0.6;
 }
 
 .project-main {
